# Flask-Task-API

./: .gitignore  README.md  pyproject.toml
flask-task-api/: .env.example  Task_API.postman_collection.json  app.py  config.py  requirements.txt  test_db.py
flask-task-api/app/: __init__.py
flask-task-api/app/config/: config.py
flask-task-api/app/models/: task.py  user.py
flask-task-api/app/routes/: auth_routes.py  health_routes.py  task_routes.py
flask-task-api/app/services/: auth_service.py  task_service.py
